--- a/blog-tag.html
+++ b/blog-tag.html
@@ -785,6 +785,11 @@
                 </a>
               </li>
               <li class="mb-3">
+                <a href="team.html" class="text-reset">
+                  Our Team
+                </a>
+              </li>
+              <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Other Projects by Nubela
                 </a>
