--- a/dwarf-forms.html
+++ b/dwarf-forms.html
@@ -854,6 +854,11 @@ this is a code with <span class="text-hl-yellow">highlight</span></code></pre>
                   Pricing
                 </a>
               </li>
+              <li class="mb-3">
+                <a href="terms-of-use.html" class="text-reset">
+                  Terms of use
+                </a>
+              </li>
             </ul>
 
           </div>
@@ -926,6 +931,11 @@ this is a code with <span class="text-hl-yellow">highlight</span></code></pre>
               <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Nubela Pte Ltd
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="team.html" class="text-reset">
+                  Our Team
                 </a>
               </li>
               <li class="mb-3">
