--- a/index.html
+++ b/index.html
@@ -1665,6 +1665,11 @@ response = requests.get(api_endpoint,
                 </a>
               </li>
               <li class="mb-3">
+                <a href="team.html" class="text-reset">
+                  Our Team
+                </a>
+              </li>
+              <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Other Projects by Nubela
                 </a>
