--- a/jobs-linkedin-profile.html
+++ b/jobs-linkedin-profile.html
@@ -1218,6 +1218,11 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
                   Pricing
                 </a>
               </li>
+              <li class="mb-3">
+                <a href="terms-of-use.html" class="text-reset">
+                  Terms of use
+                </a>
+              </li>
             </ul>
 
           </div>
@@ -1290,6 +1295,11 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
               <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Nubela Pte Ltd
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="team.html" class="text-reset">
+                  Our Team
                 </a>
               </li>
               <li class="mb-3">
