--- a/linkdb.html
+++ b/linkdb.html
@@ -977,6 +977,11 @@ AND parsed_data @> '{"experiences": [{"ends_at": null, "company": "Electronic Ar
                   Pricing
                 </a>
               </li>
+              <li class="mb-3">
+                <a href="terms-of-use.html" class="text-reset">
+                  Terms of use
+                </a>
+              </li>
             </ul>
 
           </div>
@@ -1049,6 +1054,11 @@ AND parsed_data @> '{"experiences": [{"ends_at": null, "company": "Electronic Ar
               <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Nubela Pte Ltd
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="team.html" class="text-reset">
+                  Our Team
                 </a>
               </li>
               <li class="mb-3">
