--- a/team.html
+++ b/team.html
@@ -243,7 +243,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Steven Goh illustration" src="assets/img/avatars/ava-Steven.png">
@@ -259,14 +259,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -276,7 +268,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Bach Le illustration" src="assets/img/avatars/ava-Bach.png">
@@ -292,14 +284,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -309,7 +293,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Royyan Wijaya illustration" src="assets/img/avatars/ava-Roy.png">
@@ -325,14 +309,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -342,7 +318,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Ria Setiawati illustration" src="assets/img/avatars/ava-Ria.png">
@@ -358,14 +334,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -375,7 +343,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Victor Manu illustration" src="assets/img/avatars/ava-Victor.png">
@@ -391,14 +359,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -408,7 +368,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Raefaldhi Amartya Junior illustration" src="assets/img/avatars/ava-Raefaldhi.png">
@@ -424,14 +384,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -441,7 +393,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Muhammad Yusril Sabir illustration" src="assets/img/avatars/ava-Yusril.png">
@@ -457,14 +409,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -474,7 +418,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Leo Feradero Nugraha illustration" src="assets/img/avatars/ava-Leo.png">
@@ -490,14 +434,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -507,7 +443,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Kelly Sim illustration" src="assets/img/avatars/ava-Kelly.png">
@@ -523,14 +459,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -540,7 +468,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Haris Wirabrata illustration" src="assets/img/avatars/ava-Haris.png">
@@ -556,14 +484,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -573,7 +493,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="alt" src="assets/img/avatars/ava-Romadlon.png">
@@ -589,14 +509,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -606,7 +518,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Suryo Adiguna illustration" src="assets/img/avatars/ava-Suryo.png">
@@ -622,14 +534,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -639,7 +543,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Bonita Almira illustration" src="assets/img/avatars/ava-Bonita.png">
@@ -655,14 +559,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -672,7 +568,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Hammas Hamzah Kuddah illustration" src="assets/img/avatars/ava-Hammas.png">
@@ -688,14 +584,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -705,7 +593,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Inna Nadhia Rahmatika illustration" src="assets/img/avatars/ava-Inna.png">
@@ -721,14 +609,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -738,7 +618,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Aji Nurul Wandi illustration" src="assets/img/avatars/ava-Aji.png">
@@ -754,14 +634,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -771,7 +643,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Avid Santiko Adji illustration" src="assets/img/avatars/ava-Avid.png">
@@ -787,14 +659,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -804,7 +668,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Agapitus Keyka Vigiliant illustration" src="assets/img/avatars/ava-Keyka.png">
@@ -820,14 +684,6 @@
 
               </div>
 
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
-                </p>
-
-              </div>
-
             </div>
 
           </div>
@@ -837,7 +693,7 @@
 
             <div class="card shadow-light-lg lift lift-lg rounded mb-6">
 
-              <div class="border-bottom text-center pt-6 px-4">
+              <div class="border-bottom text-center py-6 px-4">
 
                 <div class="mb-4">
                   <img class="img img-fluid rounded" alt="Bayu Atma Wijaya illustration" src="assets/img/avatars/ava-Bayu.png">
@@ -849,14 +705,6 @@
   
                 <p class="text-muted">
                   Marketing
-                </p>
-
-              </div>
-
-              <div class="card-body">
-
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus aliquet mauris, id pellentesque leo.
                 </p>
 
               </div>
@@ -982,6 +830,11 @@
               <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Nubela Pte Ltd
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="team.html" class="text-reset">
+                  Our Team
                 </a>
               </li>
               <li class="mb-3">
