--- a/employee-listing-page.html
+++ b/employee-listing-page.html
@@ -707,6 +707,11 @@
                   Pricing
                 </a>
               </li>
+              <li class="mb-3">
+                <a href="terms-of-use.html" class="text-reset">
+                  Terms of use
+                </a>
+              </li>
             </ul>
 
           </div>
@@ -750,19 +755,19 @@
                 </a>
               </li> 
               <li class="mb-3">
-                <a href="linkedin-profile-email-enrichment.html" class="text-reset">
-                  Linkedin Profile Email Enrichment
+                <a href="email-lookup-api-endpoint.html" class="text-reset">
+                  Email Lookup API Endpoint
                 </a>
               </li>
               <li class="mb-3">
                 <a href="list-employee-endpoint.html" class="text-reset">
                   List Employee Endpoint
                 </a>
-                <li class="mb-3">
-                  <a href="employee-listing-directory.html" class="text-reset">
-                    Employee Listing Directory
-                  </a>
-                </li>
+              </li>
+              <li class="mb-3">
+                <a href="reverse-email-lookup.html" class="text-reset">
+                  Reverse Email Lookup
+                </a>
               </li>
             </ul>
 
@@ -779,6 +784,11 @@
               <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Nubela Pte Ltd
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="team.html" class="text-reset">
+                  Our Team
                 </a>
               </li>
               <li class="mb-3">
