--- a/linkedin-profile-email-enrichment.html
+++ b/linkedin-profile-email-enrichment.html
@@ -740,6 +740,11 @@
                   Pricing
                 </a>
               </li>
+              <li class="mb-3">
+                <a href="terms-of-use.html" class="text-reset">
+                  Terms of use
+                </a>
+              </li>
             </ul>
 
           </div>
@@ -783,8 +788,8 @@
                 </a>
               </li> 
               <li class="mb-3">
-                <a href="linkedin-profile-email-enrichment.html" class="text-reset">
-                  Linkedin Profile Email Enrichment
+                <a href="email-lookup-api-endpoint.html" class="text-reset">
+                  Email Lookup API Endpoint
                 </a>
               </li>
               <li class="mb-3">
@@ -812,6 +817,11 @@
               <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Nubela Pte Ltd
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="team.html" class="text-reset">
+                  Our Team
                 </a>
               </li>
               <li class="mb-3">
