--- a/list-employee-endpoint.html
+++ b/list-employee-endpoint.html
@@ -1076,6 +1076,11 @@ response = requests.get(api_endpoint,
                   Pricing
                 </a>
               </li>
+              <li class="mb-3">
+                <a href="terms-of-use.html" class="text-reset">
+                  Terms of use
+                </a>
+              </li>
             </ul>
 
           </div>
@@ -1148,6 +1153,11 @@ response = requests.get(api_endpoint,
               <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Nubela Pte Ltd
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="team.html" class="text-reset">
+                  Our Team
                 </a>
               </li>
               <li class="mb-3">
