--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
     <!-- Theme CSS -->
     <link rel="stylesheet" href="./assets/css/theme.min.css">
 
-    <title>Proxycurl</title>
+    <title>Proxycurl's Team</title>
 
   </head>
 
@@ -225,11 +225,11 @@
             
             <!-- Heading -->
             <h1 class="display-3 font-weight-bold">
-              Meet our team
+              Meet the Proxycurl team
             </h1>
 
             <p class="lead text-gray-700 mb-8">
-              Respect is our currency
+              Our team
             </p>
 
           </div>
@@ -454,7 +454,7 @@
                 </h3>
   
                 <p class="text-muted">
-                  Accounts cum Admin
+                  Administrative Assistant
                 </p>
 
               </div>
