--- a/solution-growth.html
+++ b/solution-growth.html
@@ -217,7 +217,7 @@
 
     <!-- FIRST FOLD
     ================================================== -->
-    <section class="py-8 pt-md-12 bg-light">
+    <section class="py-8 pt-md-12 pb-md-12 border-bottom">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12 col-md-7 col-lg-6" data-aos="fade-right">
@@ -341,14 +341,14 @@
 
     <!-- HOW
     ================================================== -->
-    <section class="pt-md-12 py-8 pb-12 bg-gradient-light border-bottom">
+    <section class="pt-md-12 py-8 pb-12 bg-light">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12 col-md-7 col-lg-6" data-aos="fade-up">
 
             <!-- Badge -->
             <span class="badge badge-pill badge-success-soft mb-3">
-              <span class="h6 text-uppercase">How?</span>
+              <span class="h6 text-uppercase">How to</span>
             </span>
 
             <!-- Heading -->
