added about us page
added about.html page and changed the link in all page to point there instead of nebula.co

--- a/dwarf-forms.html
+++ b/dwarf-forms.html
@@ -929,7 +929,7 @@ this is a code with <span class="text-hl-yellow">highlight</span></code></pre>
             <!-- List -->
             <ul class="list-unstyled text-muted mb-0">
               <li class="mb-3">
-                <a href="https://nubela.co" class="text-reset">
+                <a href="about.html" class="text-reset">
                   Nubela Pte Ltd
                 </a>
               </li>
