--- a/list-employee-endpoint.html
+++ b/list-employee-endpoint.html
@@ -1151,7 +1151,7 @@ response = requests.get(api_endpoint,
             <!-- List -->
             <ul class="list-unstyled text-muted mb-0">
               <li class="mb-3">
-                <a href="https://nubela.co" class="text-reset">
+                <a href="about.html" class="text-reset">
                   Nubela Pte Ltd
                 </a>
               </li>
