--- a/top-up-and-gift.html
+++ b/top-up-and-gift.html
@@ -1065,7 +1065,7 @@ AND parsed_data @> '{"experiences": [{"ends_at": null, "company": "Electronic Ar
             <!-- List -->
             <ul class="list-unstyled text-muted mb-0">
               <li class="mb-3">
-                <a href="https://nubela.co" class="text-reset">
+                <a href="about.html" class="text-reset">
                   Nubela Pte Ltd
                 </a>
               </li>
