redirect button in about to team

--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
               Nubela was founded by Steven Goh in 2014. We are a developer-centric company headquartered in Singapore with employees around the world.
             </p>
             
-            <a href="#!" class="btn btn-primary ">
+            <a href="team.html" class="btn btn-primary ">
               Check out our team <i class="neu-right-md"></i>
             </a>
           </div>  
