--- a/team.html
+++ b/team.html
@@ -713,6 +713,31 @@
 
           </div>
 
+          <!--Bimo-->
+          <div class="col-12 col-md-4">
+
+            <div class="card shadow-light-lg lift lift-lg rounded mb-6">
+
+              <div class="border-bottom text-center py-6 px-4">
+
+                <div class="mb-4">
+                  <img class="img img-fluid rounded" alt="Barep Bimo Pangestu illustration" src="assets/img/avatars/ava-Bimo.png">
+                </div>
+                
+                <h3 class="font-weight-bold mb-0">
+                  Barep Bimo Pangestu
+                </h3>
+  
+                <p class="text-muted">
+                  Software Engineer
+                </p>
+
+              </div>
+
+            </div>
+
+          </div>
+
         </div>
 
       </div> <!-- / .container -->
