--- a/blog-post.html
+++ b/blog-post.html
@@ -349,6 +349,77 @@
           <div class="col-12 col-md-10 col-lg-9 col-xl-8">
 
             <!-- Heading -->
+            <h3 class="font-weight-bold mb-4">
+              Border example
+            </h3>
+
+            <!-- Table -->
+            <div class="table-responsive mb-4">
+              <table class="table table-bordered table-hover font-size-sm">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col" class="lead">Proxycurl</th>
+                    <th scope="col" class="lead">CoreSignal</th>
+                  </tr>
+                </thead>
+                <tbody class="text-gray-700">
+                  <tr>
+                    <td scope="row">Scrapes LinkedIn live</th>
+                    <td>Does not scrape LinkedIn profiles live. Real-time API reads their database</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Core business is in API enrichment</th>
+                    <td>Core business is in selling datasets</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Fresh data no older than 29 days</th>
+                    <td>Stale data (3-4 months old)</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Has a smaller dataset</th>
+                    <td>Has a dataset that is bigger and richer</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">$XX,000 for US Profile Dataset</th>
+                    <td>$130,000 for US Profile Dataset</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">$1XX,000 for Global Profile Dataset</th>
+                    <td>$160,000 for Global Profile Dataset</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">$10 for 1000 Profiles via API</th>
+                    <td>$? for 1000 Profiles via API</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">17M Company profiles</th>
+                    <td>91M Company Profiles</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Does not have job dataset</th>
+                    <td>Has job postings datasets</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Has contact data</th>
+                    <td>Does not have contact data</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+          </div>
+        </div> <!-- / .row -->
+      </div> <!-- / .container -->
+    </section>
+
+    <!-- SECTION
+    ================================================== -->
+    <section class="pt-6 pt-md-8">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-10 col-lg-9 col-xl-8">
+
+            <!-- Heading -->
             <h2 class="font-weight-bold">
               Big heading for a new topic
             </h2>
