--- a/solution-growth.html
+++ b/solution-growth.html
@@ -383,7 +383,15 @@
     <section class="pt-md-12 py-8 pb-12 bg-light">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-12 col-md-7 col-lg-6" data-aos="fade-up">
+
+          <div class="col-12 col-md-5 col-lg-6 order-md-2">
+
+            <!-- Image -->
+            <img src="assets/img/illustrations/Build an exhaustive list of Identify prospects.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0 rounded" alt="..." data-aos="fade-up" data-aos-delay="100">
+
+          </div>
+
+          <div class="col-12 col-md-7 col-lg-6 order-md-1" data-aos="fade-up">
 
             <!-- Badge -->
             <span class="badge badge-pill badge-success-soft mb-3">
@@ -406,12 +414,6 @@
 
           </div>
 
-          <div class="col-12 col-md-5 col-lg-6">
-
-            <!-- Image -->
-            <img src="Illustration_landscape_placement.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0 rounded" alt="..." data-aos="fade-up" data-aos-delay="100">
-
-          </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
     </section>
