--- a/solution-growth.html
+++ b/solution-growth.html
@@ -437,7 +437,7 @@
           <div class="col-12 col-md-6">
 
             <h4 class="mb-6">
-              Now that we have a list of prospects, a growth-stage company can build growth in three ways
+              Now that we have a list of prospects, a growth-stage company can build growth in four ways
             </h4>
 
           </div>
