--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
 
      <!-- NAVBAR
     ================================================== -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
       <div class="container-fluid">
 
         <!-- Brand -->
@@ -149,6 +149,46 @@
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="pricing.html">
                     Proxycurl API Pricing Plans
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+            <!-- Solution -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="navbarAccount" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                Solutions <i class="fe fe-chevron-down"></i>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarAccount">
+
+                <!-- Heading -->
+                <h6 class="dropdown-header">
+                  <img class="icon" width="24" alt="Dwarf Forms logo" src="assets/img/logos/solutions.svg"> Solutions
+                </h6>   
+
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Accelerating growth-stage startups
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Sales and Marketing automation
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Investment signals
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Talent identification
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Clearbit alternative
                   </a>
                 </li>
               </ul>
