--- a/employee-listing-directory.html
+++ b/employee-listing-directory.html
@@ -32,7 +32,7 @@
 
      <!-- NAVBAR
     ================================================== -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-togglable">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
       <div class="container-fluid">
 
         <!-- Brand -->
@@ -56,237 +56,171 @@
           <!-- Navigation -->
           <ul class="navbar-nav ml-auto">
 
+            <!-- Products -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Linkedin API <i class="fe fe-chevron-down"></i>
+              <a class="nav-link dropdown-toggle" id="navbarPages" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                Products <i class="fe fe-chevron-down"></i>
               </a>
-              <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
-                <div class="list-group list-group-flush">
+              <div class="dropdown-menu dropdown-menu-lg" aria-labelledby="navbarPages">
+                <div class="row no-gutters">
+                  <div class="col-12">
+                    <div class="row no-gutters">
+                      <div class="col-12 col-lg-6">
 
-                  <a class="list-group-item" href="people-linkedin-profile.html">
+                        <!-- Heading -->
+                        <h6 class="dropdown-header">
+                          <img class="icon" width="24" alt="Dwarf Forms logo" src="assets/img/logos/dwarf forms logo blue.svg"> Dwarf Forms
+                        </h6>
 
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-user-circle" style="font-size: 24px;"></i>
+                        <!-- List -->
+                        <a class="dropdown-item" href="dwarf-forms.html">
+                          Dwarf Forms
+                        </a>
+                        <a class="dropdown-item mb-5" href="#!">
+                          API Documentation
+                        </a>
+
+                        <!-- Heading -->
+                        <h6 class="dropdown-header">
+                          <img class="icon" width="24" alt="database icon" src="assets/img/logos/database icon.svg"> LinkDB
+                        </h6>
+
+                        <!-- List -->
+                        <a class="dropdown-item mb-5" href="linkdb.html">
+                          Database of public <br>
+                          LinkedIn profiles
+                        </a>
+
+                        <!-- Heading -->
+                        <h6 class="dropdown-header">
+                          <img class="icon" width="24" alt="emoji icon" src="assets/img/logos/emoji smiley.svg"> Freebies
+                        </h6>
+
+                        <!-- List -->
+                        <a class="dropdown-item mb-5 mb-lg-0" href="disposable-email.html">
+                          Disposable Email Checker
+                        </a>
+
+                      </div>
+                      <div class="col-12 col-lg-6">
+
+                        <!-- Heading -->
+                        <h6 class="dropdown-header">
+                          <img class="icon" width="24" alt="Proxycurl logo" src="assets/img/logos/proxycurl logo blue.svg"> Proxycurl API
+                        </h6>
+
+                        <!-- List -->
+                        <a class="dropdown-item" href="#!">
+                          LinkedIn Person Profile API
+                        </a>
+                        <a class="dropdown-item" href="#!">
+                          LinkedIn Company Profile API
+                        </a>
+                        <a class="dropdown-item" href="#!">
+                          Work Email Lookup API
+                        </a>
+                        <a class="dropdown-item" href="#!">
+                          Employee Listing API
+                        </a>
+                        <a class="dropdown-item" href="#!">
+                          Reverse Email Lookup API
+                        </a>
+                        <a class="dropdown-item mb-5" href="#!">
+                          API Documentation
+                        </a>
+
+                      </div>
                     </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Person Profile Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Profiles
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="company-linkedin-profile.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-company" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Company Profile Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Companies
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="jobs-linkedin-profile.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-bag" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Job Profile Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin Jobs
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="linkdb.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-db" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        LinkDB
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Database of Linkedin Profiles
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="linkdb-snapshots.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-data-quality" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        LinkDB Snapshots
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Snapshot of our database
-                      </p>
-
-                    </div>
-
-                  </a> 
-                  
-                  <a class="list-group-item" href="linkedin-profile-email-enrichment.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-email" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Linkedin Profile Email Enrichment
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Work email from Linkedin profiles
-                      </p>
-
-                    </div>
-
-                  </a>
-
-                  <a class="list-group-item" href="list-employee-endpoint.html">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-groups" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        List Employee Endpoint
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Scrape Linkedin List Employee
-                      </p>
-
-                    </div>
-
-                  </a>
-
+                  </div>
                 </div>
-              </div>
+              </div> <!-- / .row -->
             </li>
 
+            <!-- Pricing -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
-                Free Tools <i class="fe fe-chevron-down"></i>
+              <a class="nav-link dropdown-toggle" id="navbarAccount" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                Pricing <i class="fe fe-chevron-down"></i>
               </a>
-              <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDocumentation">
-                <div class="list-group list-group-flush">
-                  
-                  <a class="list-group-item" href="identify.html" target="_blank">
-
-                    <!-- Icon -->
-                    <div class="icon icon-sm text-primary">
-                      <i class="neu-search" style="font-size: 24px;"></i>
-                    </div>
-
-                    <!-- Content -->
-                    <div class="ml-4">
-
-                      <!-- Heading -->
-                      <h6 class="font-weight-bold text-uppercase text-primary mb-0">
-                        Decision maker finder
-                      </h6>
-
-                      <!-- Text -->
-                      <p class="font-size-sm text-gray-700 mb-0">
-                        Identify decision makers of prospect
-                      </p>
-
-                    </div>
-
+              <ul class="dropdown-menu" aria-labelledby="navbarAccount">
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="dwarf-forms-pricing.html">
+                    Dwarf Forms Pricing Plan
                   </a>
-
-                </div>
-              </div>
-            </li>            
-
-            <li class="nav-item">
-              <a class="nav-link" id="navbarPages" href="pricing.html">
-                Pricing
-              </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="pricing.html">
+                    Proxycurl API Pricing Plans
+                  </a>
+                </li>
+              </ul>
             </li>
 
+            <!-- Solution -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="navbarAccount" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                Solutions <i class="fe fe-chevron-down"></i>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarAccount">
+
+                <!-- Heading -->
+                <h6 class="dropdown-header">
+                  <img class="icon" width="24" alt="Dwarf Forms logo" src="assets/img/logos/solutions.svg"> Solutions
+                </h6>   
+
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Accelerating growth-stage startups
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Sales and Marketing automation
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Investment signals
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Talent identification
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Clearbit alternative
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+            <!-- FAQ -->
             <li class="nav-item">
               <a class="nav-link" id="navbarAccount" href="#!">
-                Documentation
+                FAQ
+              </a>
+            </li>
+
+            <!-- Blog -->
+            <li class="nav-item">
+              <a class="nav-link" id="navbarAccount" href="#!">
+                Blog
               </a>
             </li>
 
           </ul>
 
+          <div class="text-center ml-auto">
+            <!-- Button -->
+            <a class="btn btn-sm btn-link" href="login.html">
+              Log in
+            </a>
+          </div>
+
           <!-- Button -->
-          <a class="navbar-btn btn btn-sm btn-primary lift ml-auto" href="login.html">
-            Log in
+          <a class="navbar-btn btn btn-sm btn-primary lift" href="register.html">
+            Sign up
           </a>
 
         </div>
