--- a/solution-growth.html
+++ b/solution-growth.html
@@ -25,7 +25,7 @@
     <!-- Theme CSS -->
     <link rel="stylesheet" href="./assets/css/theme.min.css">
 
-    <title>Proxycurl Solution - Growth stage companies</title>
+    <title>Accelerate hyper-growth with Proxycurl</title>
 
   </head>
 
