--- a/linkdb.html
+++ b/linkdb.html
@@ -257,7 +257,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 py-lg-6 bg-light bg-between border-bottom" style="background-image: url(./assets/img/illustrations/linkdb-left.png), url(./assets/img/illustrations/linkdb-right.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 bg-light bg-between border-bottom" style="background-image: url(./assets/img/illustrations/linkdb-left.png), url(./assets/img/illustrations/linkdb-right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
