--- a/disposable-email.html
+++ b/disposable-email.html
@@ -271,7 +271,7 @@
               If you run a SaaS product with a free trial like us, then you might experience fraudulent registrations from disposable emails abusing free trials. Use our Disposable Email Checker API to identify the origin of an email address and differentiate between real users and fraudulent users.
             </p>
 
-            <img class="img img-fluid mb-6" alt="..." src="Illustration_landscape_placement.png">
+            <img class="img img-fluid mb-4" alt="Disposable email illustration" src="assets/img/illustrations/Disposable Email Illustration.png">
 
             <div class="row justify-content-center mb-8">
 
@@ -325,7 +325,7 @@
 
             <!-- Icon -->
             <div class="icon text-primary mb-3">
-              <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"/><path d="M7 3h10a4 4 0 110 8H7a4 4 0 110-8zm0 6a2 2 0 100-4 2 2 0 000 4z" fill="#335EEA"/><path d="M7 13h10a4 4 0 110 8H7a4 4 0 110-8zm10 6a2 2 0 100-4 2 2 0 000 4z" fill="#335EEA" opacity=".3"/></g></svg>
+              <svg id="b" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M22.5,17.0002c0,2.4814-2.0186,4.5-4.5,4.5s-4.5-2.0186-4.5-4.5,2.0186-4.5,4.5-4.5c.99,0,1.9294,.3237,2.7002,.9041v-.4041c0-.2764,.2236-.5,.5-.5s.5,.2236,.5,.5v1.5996c0,.2764-.2236,.5-.5,.5h-1.6001c-.2764,0-.5-.2236-.5-.5s.2236-.5,.5-.5h.325c-.5663-.3766-1.2253-.5996-1.925-.5996-1.9297,0-3.5,1.5703-3.5,3.5s1.5703,3.5,3.5,3.5,3.5-1.5703,3.5-3.5c0-.2764,.2236-.5,.5-.5s.5,.2236,.5,.5Z" fill="#335eea"/><path d="M19.6001,16.5999h.441c-.0264,.1295-.0411,.2632-.0411,.4004,0,1.1025-.897,2-2,2s-2-.8975-2-2c0-.983,.7145-1.7985,1.6509-1.9647,.1993,.8944,.9948,1.5643,1.9492,1.5643Zm-7.6001,.4004c0-.8536,.1819-1.6646,.5046-2.4005-.1675,.029-.3333,.0689-.5046,.0691-.5437-.0003-1.0771-.1485-1.543-.4287l-6.457-3.8741v-2.3322l7.4854,4.4915c.3172,.1893,.7128,.1893,1.03,0l7.4846-4.4915v2.3324l-1.1787,.7072c.4242,.0594,.841,.1479,1.2382,.2927,.3244-.227,.7148-.366,1.1407-.366,.2848,0,.5546,.0615,.7998,.1688V5c0-1.1046-.8954-2-2-2H4c-1.1046,0-2,.8954-2,2v14c0,1.1046,.8954,2,2,2H13.5402c-.9542-1.0628-1.5402-2.4623-1.5402-3.9998Z" fill="#335eea" isolation="isolate" opacity=".3"/></svg>
             </div>
 
             <!-- Heading -->
@@ -343,7 +343,7 @@
 
             <!-- Icon -->
             <div class="icon text-primary mb-3">
-              <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"/><path d="M5.5 4h4A1.5 1.5 0 0111 5.5v1A1.5 1.5 0 019.5 8h-4A1.5 1.5 0 014 6.5v-1A1.5 1.5 0 015.5 4zm9 12h4a1.5 1.5 0 011.5 1.5v1a1.5 1.5 0 01-1.5 1.5h-4a1.5 1.5 0 01-1.5-1.5v-1a1.5 1.5 0 011.5-1.5z" fill="#335EEA"/><path d="M5.5 10h4a1.5 1.5 0 011.5 1.5v7A1.5 1.5 0 019.5 20h-4A1.5 1.5 0 014 18.5v-7A1.5 1.5 0 015.5 10zm9-6h4A1.5 1.5 0 0120 5.5v7a1.5 1.5 0 01-1.5 1.5h-4a1.5 1.5 0 01-1.5-1.5v-7A1.5 1.5 0 0114.5 4z" fill="#335EEA" opacity=".3"/></g></svg>
+              <svg id="b" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20,9h-6c-1.1046,0-2,.8954-2,2v8c0,1.1046,.8954,2,2,2h1.5c.2762,0,.5-.2239,.5-.5v-.4466c0-.4981,.3404-.9598,.8321-1.0397,.6265-.1019,1.1679,.379,1.1679,.9863v.5c0,.2761,.2238,.5,.5,.5h1.5c1.1046,0,2-.8954,2-2V11c0-1.1046-.8954-2-2-2Zm-4.7778,6.5c0,.2761-.2239,.5-.5,.5h-1c-.2761,0-.5-.2239-.5-.5v-1c0-.2762,.2239-.5,.5-.5h1c.2761,0,.5,.2238,.5,.5v1Zm0-3c0,.2761-.2239,.5-.5,.5h-1c-.2761,0-.5-.2239-.5-.5v-1c0-.2762,.2239-.5,.5-.5h1c.2761,0,.5,.2238,.5,.5v1Zm3,3c0,.2761-.2239,.5-.5,.5h-1c-.2761,0-.5-.2239-.5-.5v-1c0-.2762,.2239-.5,.5-.5h1c.2761,0,.5,.2238,.5,.5v1Zm0-3c0,.2761-.2239,.5-.5,.5h-1c-.2761,0-.5-.2239-.5-.5v-1c0-.2762,.2239-.5,.5-.5h1c.2761,0,.5,.2238,.5,.5v1Zm3,3c0,.2761-.2239,.5-.5,.5h-1c-.2761,0-.5-.2239-.5-.5v-1c0-.2762,.2239-.5,.5-.5h1c.2761,0,.5,.2238,.5,.5v1Zm0-3c0,.2761-.2239,.5-.5,.5h-1c-.2761,0-.5-.2239-.5-.5v-1c0-.2762,.2239-.5,.5-.5h1c.2761,0,.5,.2238,.5,.5v1Z" fill="#335eea"/><path d="M10.5562,21H4c-1.1046,0-2-.8954-2-2V5c0-1.1046,.8954-2,2-2H20c1.1046,0,2,.8954,2,2v2.5565c-.5907-.3445-1.2682-.5563-1.9999-.5563h-6c-2.2056,0-4,1.7939-4,4v.6339l-6.0001-3.6003v2.3322l6.0001,3.5999v5.0342c0,.7318,.2118,1.4091,.5562,1.9998Z" fill="#335eea" isolation="isolate" opacity=".3"/></svg>
             </div>
 
             <!-- Heading -->
@@ -361,7 +361,7 @@
 
             <!-- Icon -->
             <div class="icon text-primary mb-3">
-              <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"/><path d="M17.272 8.685a1 1 0 111.456-1.37l4 4.25a1 1 0 010 1.37l-4 4.25a1 1 0 01-1.456-1.37l3.355-3.565-3.355-3.565zm-10.544 0L3.373 12.25l3.355 3.565a1 1 0 01-1.456 1.37l-4-4.25a1 1 0 010-1.37l4-4.25a1 1 0 011.456 1.37z" fill="#335EEA"/><rect fill="#335EEA" opacity=".3" transform="rotate(15 12 12)" x="11" y="4" width="2" height="16" rx="1"/></g></svg>
+              <svg id="b" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M4,10.3661v-2.3322l6.6098,3.9661h2.7811l6.6091-3.9661v2.3324l-2.7228,1.6337h4.7228V5c0-1.1046-.8954-2-2-2H4c-1.1046,0-2,.8954-2,2v7H6.7232l-2.7233-1.6339Z" fill="#335eea" isolation="isolate" opacity=".3"/><path d="M22.0002,12.5002H2.0002c-.2764,0-.5-.2236-.5-.5s.2236-.5,.5-.5H22.0002c.2764,0,.5,.2236,.5,.5s-.2236,.5-.5,.5Zm-9.999,3.1686c.7247-.0008,1.4363-.1985,2.0573-.5714l1.8287-1.0972h-1.9436l-.3995,.2397c-.4664,.28-.9999,.4283-1.5439,.4289-.5437-.0003-1.077-.1485-1.543-.4287l-.3999-.2399h-1.9437l1.8282,1.0969c.6213,.3736,1.3328,.5714,2.0595,.5717Zm8.9988-1.6686v4.9998c0,.5514-.4485,1-1,1H4c-.5514,0-1-.4486-1-1v-4.9998H2v4.9998c0,1.1046,.8954,2,2,2H20c1.1046,0,2-.8954,2-2v-4.9998h-1Z" fill="#335eea"/></svg>
             </div>
 
             <!-- Heading -->
