--- a/employee-search-api.html
+++ b/employee-search-api.html
@@ -257,14 +257,15 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pt-md-9 pb-md-12 bg-light bg-between border-bottom" style="background-image: url(illustration_placement_portrait.png), url(illustration_placement_portrait.png);">
+    <section class="pt-8 pb-11 pt-md-9 pb-md-12 bg-light bg-between border-bottom" style="background-image: url(assets/img/illustrations/employee-api-left.png), url(assets/img/illustrations/employee-api-right.png);">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-12 col-md-10 col-lg-7" data-aos="fade-up">
+          <div class="col-12 col-md-10 col-lg-9" data-aos="fade-up">
  
             <!-- Heading -->
-            <h1 class="display-3 pt-lg-12 font-weight-bold text-center" style="padding-top: 96px;">
-              Search employees by their job title on LinkedIn
+            <h1 class="display-2 pt-lg-12 font-weight-bold text-center">
+              Search employees by their<br>
+              <span class="text-primary">job title on LinkedIn</span>
             </h1>
 
             <p class="font-size-lg text-muted mb-6 text-center">
@@ -310,7 +311,7 @@
 
           <div class="col-12 col-md-6">
 
-            <img alt="..." class="img img-fluid" src="Illustration_landscape_placement.png">
+            <img alt="employee search illustration" class="img img-fluid" src="assets/img/illustrations/Employee_search_api_2_1_.png">
 
             <p class="lead mt-4 mb-6 text-center">
               Use case 1: "Find decision makers"
@@ -323,7 +324,7 @@
 
             <img alt="..." class="img img-fluid" src="Illustration_landscape_placement.png">
 
-            <p class="lead mt-4 text-center">
+            <p class="lead mt-4 mb-8 text-center">
               Use case 2: "Finding talents"
             </p>
 
