--- a/disposable-email.html
+++ b/disposable-email.html
@@ -387,14 +387,14 @@
           <div class="col-12 col-md-10 col-lg-8 text-center">
 
             <!-- Heading -->
-            <h1 class="font-weight-bold mb-10">
+            <h1 class="font-weight-bold">
               Code Examples
             </h1>
 
           </div>
         </div> <!-- / .row -->
 
-        <div class="row justify-content-center px-10">
+        <div class="row justify-content-center py-10">
 
           <div class="col-12 col-md-7">
 
